--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	"require": {
 		"php": ">=5.4.0",
 		"nette/nette": "@dev",
-		"bazo/linker": "@dev"
+		"bazo/nette-linker": "@dev"
 	},
 	"autoload": {
 		"psr-0": {"Bazo": "src/"}
